2009-03-27  Michael Stucki  <michael@typo3.org>

	* AdminPanel: Indicate number of USER_INT objects used on a page

2009-03-26  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10776: Clearing cache_treelist after inserting page on root level does not work

2009-03-26  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #10723: ambigious description of the 'lifetime' option in installtool (thanks to Dan Osipov)

2009-03-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #5957: Misleading comments in class.t3lib_extmgm.php

2009-03-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10642: Backend admin cannot perform file operations in filelist (credits to Christian Kuhn)
	* Fixed bug #10761: Searching for specific record opens "edit record" in wrong frame

2009-03-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10432: Page TS option to disable available languages (thanks to Xavier Perseguers)
	* Fixed bug #10765: doc->loadScriptaculous should be callable without parameters

2009-03-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10663: felogin - Invalid XHTML Code in logout form (thanks to Stano Paska)

2009-03-20  Oliver Hader  <oliver@typo3.org>

	* Added feature #10748: Provide complete title in element browser if title was cut off
	* Fixed bug #10742: LOCAL_LANG default values are overwritten by localized text (thanks to Mathias Gisch)

2009-03-19  Oliver Hader  <oliver@typo3.org>

	* Fixed issue #10713: Refactor tslib_gifBuilder::calcOffset()

2009-03-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed Bug #10607: Missing localization in TCA of sys_action
	* Fixed Bug #9359: XML Problems with PHP5 and libxml

2009-03-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10670: htmlArea RTE: enable alternate rendering of image click enlarge by FE plugins

2009-03-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10668: Cache section in the admin panel does not work anymore

2009-03-11  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0alpha2
