@@ -5337,6 +5337,18 @@ final class t3lib_div {
 			$path .= (($command=='composite') ? $combineScript : $command).$isExt;
 		}
 
+			// strip profile information for thumbnails and reduce their size
+		if ($gfxConf['im_useStripProfileByDefault'] && $gfxConf['im_stripProfileCommand'] != '') {
+			if (strpos($parameters, $gfxConf['im_stripProfileCommand']) === false) {
+					// Determine whether the strip profile action has be disabled by TypoScript:
+				if ($parameters !== '' && $parameters !== '-version' && strpos($parameters, '###SkipStripProfile###') === false) {
+					$parameters = $gfxConf['im_stripProfileCommand'] . ' ' . $parameters;
+				} else {
+					$parameters = str_replace('###SkipStripProfile###', '', $parameters);
+				}
+			}
+		}
+
 		$cmdLine = $path.' '.$parameters;
 
 		if($command=='composite' && $switchCompositeParameters)	{	// Because of some weird incompatibilities between ImageMagick 4 and 6 (plus GraphicsMagick), it is needed to change the parameters order under some preconditions
